turtleart.housetree.HouseTree.scala.error
Compilation error:
HouseTree:16: error: not found: value baissecrayon
  maison(30);leveCrayon();avance(20);baissecrayon();droite(90)
                                     ^